# Cloudboxd

./: .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml
airflow/: requirements.txt
airflow/config/: .user.yml  profiles.yml
airflow/dags/: cloudboxd_daily_pipeline.py
api/: main.py
dashboards/: box_maintenance.csv  cloudboxd_dashboards.html  demand_vs_inventory.csv  dim_customers.csv  dim_drivers.csv  dim_hotboxes.csv  fct_box_assignments.csv  fct_orders.csv  fleet_utilization.csv  route_efficiency.csv  turnaround_time.csv
data_generator/: config.yml  generator.py
dbt_project/: dbt_project.yml
dbt_project/models/marts/core/: dim_addresses.sql  dim_customers.sql  dim_dates.sql  dim_drivers.sql  dim_hotboxes.sql  dim_menu_items.sql  fct_box_assignments.sql  fct_box_lifecycle_events.sql  fct_deliveries.sql  fct_orders.sql
dbt_project/models/marts/customer/: mart_customer_orders.sql  mart_subscription_performance.sql
dbt_project/models/marts/supply_chain/: mart_box_maintenance.sql  mart_demand_vs_inventory.sql  mart_fleet_utilization.sql  mart_reverse_logistics.sql  (+2 more)
dbt_project/models/staging/: schema.yml  sources.yml  stg_box_assignments.sql  stg_box_lifecycle_events.sql  stg_customers.sql  stg_deliveries.sql  stg_feedback.sql  stg_hotboxes.sql  stg_loyalty.sql  stg_menu_items.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql
kafka/consumers/: rfid_consumer.py
kafka/producers/: rfid_producer.py
scripts/: export_for_tableau.py  load_to_duckdb.py  upload_to_s3.py
terraform/: iam.tf  outputs.tf  s3.tf  variables.tf
