[project]
name = "cloudboxd"
version = "0.1.0"
description = "CloudBoxd - RFID-tracked meal delivery DE portfolio project"
requires-python = ">=3.11"

dependencies = [
    "faker>=24.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "duckdb>=0.10.0",
    "sqlalchemy>=2.0.0",
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_generator"]
